--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <title>E-Commerce</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce</title>
+
+    <!-- Iconos CSS -->
+    <link rel="stylesheet" href="/assets/css/themify-icons.css">
+
+    <!-- Bootstrap 5.2.2 CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="/assets/css/responsive.css">
+
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar">
+
+    <!-- Nav sección -->
+    <section id="header">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="assets/img/logo.png" class="img-fluid" alt="logo-empresa">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="ti-align-justify navbar-toggler-icon"></span>
+                <!-- <span class="navbar-toggler-icon"></span> -->
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#productos">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#special">Special</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#testimonio">Testimonios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contacto">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </section>
+
+
+
+
+    <!--  Home sección -->
+<section id="home" class="home pt-5 overflow-hidden">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+           <div class="home-banner home-banner-1">
+            <div class="home-banner-text">
+                <h1>Mujer</h1>
+                <h2>52% Descuento para esta sesión</h2>
+                <a href="#" class="btn btn-danger text-uppercase mt-4">Tus productos</a>
+            </div>
+           </div>
+          </div>
+          <div class="carousel-item">
+            <div class="home-banner home-banner-2">
+                <div class="home-banner-text">
+                    <h1>E-Shop</h1>
+                    <h2>Tarjeta de credito & Pay Pal</h2>
+                    <a href="#" class="btn btn-danger text-uppercase mt-4">Tus productos</a>
+                </div>
+               </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true">
+            <span class="ti-angle-left slider-icon"></span>
+          </span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true">
+            <span class="ti-angle-right slider-icon"></span>
+          </span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+</section>
+
+    <!-- Products sección -->
+
+
+    <!-- Testimonial sección -->
+
     <a href="welcome.html">Back to Welcome</a>
+
+    <!-- Bootstrap 5.2.2 JS externo  -->
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    <!-- Main  JS externo -->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
