añadir la seccion de productos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="assets/img/logo.png" class="img-fluid" alt="logo-empresa">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="ti-align-justify navbar-toggler-icon"></span>
+                <span class="ti-align-justify"></span>
                 <!-- <span class="navbar-toggler-icon"></span> -->
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -98,10 +98,256 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-</section>
+
+    <!-- Offert sección -->
+    <div class="offers">
+      <div class="container">
+        <div class="row">
+          <!-- Offer Box One -->
+          <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
+            <a href="#">
+              <div class="offer-box text-center position-relative">
+                <div class="offer-inner">
+                  <div class="offer-image position-relative overflow-hidden">
+                    <img src="assets/img/offer1.jpg" alt="Offers" class="img-fluid">
+                    <div class="offer-overlay"></div>
+                  </div>
+                  <div class="offer-info">
+                    <div class="offer-info-inner">
+                      <p class="heading-bigger text-capitalize">Sale 30%</p>
+                    <p class="offer-title-1 text-uppercase font-weight-bold">Don't Miss This Chance</p>
+                    <button type="button" class="btn btn-outline-danger text-uppercase mt-4">Shop Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- Offer Box Two -->
+          <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between">
+            <a href="#">
+              <div class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0">
+                <div class="offer-inner">
+                  <div class="offer-image position-relative overflow-hidden">
+                    <img src="assets/img/offer2.jpg" alt="Offers" class="img-fluid">
+                    <div class="offer-overlay"></div>
+                  </div>
+                  <div class="offer-info">
+                    <div class="offer-info-inner">
+                      <p class="heading-bigger text-capitalize">Sale 70%</p>
+                    <p class="offer-title-1 text-uppercase font-weight-bold">Don't Miss This Chance</p>
+                    <button type="button" class="btn btn-outline-danger text-uppercase mt-4">Shop Now</button>
+                    </div>                    
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="offer-box text-center position-relative">
+                <div class="offer-inner">
+                  <div class="offer-image position-relative overflow-hidden">
+                    <img src="assets/img/offer3.jpg" alt="Offers" class="img-fluid">
+                    <div class="offer-overlay"></div>
+                  </div>
+                  <div class="offer-info">
+                    <div class="offer-info-inner">
+                      <p class="heading-bigger text-capitalize">Sale 50%</p>
+                    <p class="offer-title-1 text-uppercase font-weight-bold">Don't Miss This Chance</p>
+                    <button type="button" class="btn btn-outline-danger text-uppercase mt-4">Shop Now</button>
+                    </div>                    
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- Offer Box Three -->
+          <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
+            <a href="#">
+              <div class="offer-box text-center position-relative">
+                <div class="offer-inner">
+                  <div class="offer-image position-relative overflow-hidden">
+                    <img src="assets/img/offer4.jpg" alt="Offers" class="img-fluid">
+                    <div class="offer-overlay"></div>
+                  </div>
+                  <div class="offer-info">
+                    <div class="offer-info-inner">
+                      <p class="heading-bigger text-capitalize">Sale 25%</p>
+                    <p class="offer-title-1 text-uppercase font-weight-bold">Don't Miss This Chance</p>
+                    <button type="button" class="btn btn-outline-danger text-uppercase mt-4">Shop Now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
     <!-- Products sección -->
+      <section id="products" class="products">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="headline text-center mb-5">
+                <h2 class="pb-3 position-relative d-inline-block">FEATURED PRODUCTS</h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+             <div class="col-sm-6 col-lg-4">
+              <a href="#" class="d-block text-center mb-4">
+                <div class="product-list">
+                  <div class="product-image position-relative">
+                    <span class="sale">Sale</span>
+                    <img src="assets/img/p1.jpg" class="img-fluid product-image-first" alt="products">
+                    <img src="assets/img/p3.jpg" class="img-fluid product-image-secondary" alt="products">
+                  </div>
+                  <div class="product-name pt-3">
+                    <h3 class="text-capitalize">Winter Long Sleeve Black White</h3>
+                    <p class="mb-0 amount">$400.00 <del>$580.00</del></p>
+                    <div class="py-1">
+                      <span class="ti-star"></span>
+                      <span class="ti-star"></span>
+                      <span class="ti-star"></span>
+                      <span class="ti-star"></span>
+                      <span class="ti-star"></span>
+                    </div>
+                    <button type="button" class="add_to_card">ADD TO CARD</button>
+                  </div>
+                </div>
+              </a>
+             </div>
+              <div class="col-sm-6 col-lg-4">
+                <a href="#" class="d-block text-center mb-4">
+                  <div class="product-list">
+                    <div class="product-image position-relative">                      
+                      <img src="assets/img/p2.jpg" class="img-fluid product-image-first" alt="products">
+                      <img src="assets/img/p4.jpg" class="img-fluid product-image-secondary" alt="products">
+                    </div>
+                    <div class="product-name pt-3">
+                      <h3 class="text-capitalize">women totes lady handbag</h3>
+                      <p class="mb-0 amount">$300.00</p>
+                      <div class="py-1">
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star"></span>
+                        <span class="ti-star"></span>
+                      </div>
+                      <button type="button" class="add_to_card">ADD TO CARD</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6 col-lg-4">
+                <a href="#" class="d-block text-center mb-4">
+                  <div class="product-list">
+                    <div class="product-image position-relative">                      
+                      <img src="assets/img/p4.jpg" class="img-fluid product-image-first" alt="products">
+                      <img src="assets/img/p6.jpg" class="img-fluid product-image-secondary" alt="products">
+                    </div>
+                    <div class="product-name pt-3">
+                      <h3 class="text-capitalize">Lace water soluble dress</h3>
+                      <p class="mb-0 amount">$600.00</p>
+                      <div class="py-1">
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star"></span>
+                        <span class="ti-star"></span>
+                      </div>
+                      <button type="button" class="add_to_card">ADD TO CARD</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6 col-lg-4">
+                <a href="#" class="d-block text-center mb-4">
+                  <div class="product-list">
+                    <div class="product-image position-relative">                      
+                      <img src="assets/img/p10.jpg" class="img-fluid product-image-first" alt="products">
+                      <img src="assets/img/p8.jpg" class="img-fluid product-image-secondary" alt="products">
+                    </div>
+                    <div class="product-name pt-3">
+                      <h3 class="text-capitalize">Elegant Formal Party Dress</h3>
+                      <p class="mb-0 amount">$500.00</p>
+                      <div class="py-1">
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star"></span>
+                        <span class="ti-star"></span>
+                      </div>
+                      <button type="button" class="add_to_card">ADD TO CARD</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6 col-lg-4">
+                <a href="#" class="d-block text-center mb-4">
+                  <div class="product-list">
+                    <div class="product-image position-relative">
+                      <span class="sale">Sale</span>
+                      <img src="assets/img/p8.jpg" class="img-fluid product-image-first" alt="products">
+                      <img src="assets/img/p10.jpg" class="img-fluid product-image-secondary" alt="products">
+                    </div>
+                    <div class="product-name pt-3">
+                      <h3 class="text-capitalize">women totes lady handbag</h3>
+                      <p class="mb-0 amount">$300.00 <del>$480.00</del></p>
+                      <div class="py-1">
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star"></span>
+                        <span class="ti-star"></span>
+                      </div>
+                      <button type="button" class="add_to_card">ADD TO CARD</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6 col-lg-4">
+                <a href="#" class="d-block text-center mb-4">
+                  <div class="product-list">
+                    <div class="product-image position-relative">                      
+                      <img src="assets/img/p1.jpg" class="img-fluid product-image-first" alt="products">
+                      <img src="assets/img/p2.jpg" class="img-fluid product-image-secondary" alt="products">
+                    </div>
+                    <div class="product-name pt-3">
+                      <h3 class="text-capitalize">women totes lady handbag</h3>
+                      <p class="mb-0 amount">$300.00 <del>$480.00</del></p>
+                      <div class="py-1">
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star active"></span>
+                        <span class="ti-star"></span>
+                        <span class="ti-star"></span>
+                      </div>
+                      <button type="button" class="add_to_card">ADD TO CARD</button>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
 
+            <!-- UP to 75% OFF -->
+            <div class="overflow-hidden my-5">
+              <div class="row">
+                <div class="col-sm-12 up_to_off">
+                  <img src="assets/img/lg.jpg" alt="offers" class="img-fluid w-100">
+                  <div class="up_to_content">
+                    <h2>UP TO 75% OFF SPRINGSALE!</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+      </section>
 
     <!-- Testimonial sección -->
 
