--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
-    <!-- Nav sección -->
+    <!-- NavBar sección -->
     <section id="header">
         <nav class="navbar navbar-expand-lg bg-white fixed-top">
             <div class="container">
@@ -38,16 +38,16 @@
                     <a class="nav-link active" aria-current="page" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#productos">Productos</a>
+                    <a class="nav-link" href="#products">Productos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#special">Special</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#testimonio">Testimonios</a>
+                    <a class="nav-link" href="#testimonial">Testimonios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contacto">Contacto</a>
+                    <a class="nav-link" href="#contact">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -349,7 +349,188 @@
           </div>
       </section>
 
+    <!-- Special sección -->
+      <section id="special" class="special">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="headline text-center mb-5">
+                <h2 class="pb-3 position-relative d-inline-block">SUMMER SALE</h2>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-lg-7 text-center text-lg-start">
+              <div class="countdown-container">
+                <h2 class="text-uppercase">Sexy Women Floral Embrodery</h2>
+                <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, esse quis. Magnam, voluptas qui! Autem ut doloribus nobis facilis laborum tempora, sapiente, est magnam dolor hic culpa iure mollitia corporis. </p>
+                <ul class="list-unstyled countdown-counter">
+                  <li><span class="fs-1 d-block" id="days">00</span> Days</li>
+                  <li><span class="fs-1 d-block" id="hours">00</span>Hr</li>
+                  <li><span class="fs-1 d-block" id="min">00</span>Min</li>
+                  <li><span class="fs-1 d-block" id="sec">00</span>Sec</li>
+                </ul>
+                <span class="countdown-price h3 d-block mb-4">$420.00 <del>$670.00</del></span>
+                <button type="button" class="btn btn-danger">ADD TO CART</button>
+              </div>
+            </div>
+            <div class="col-sm-12 col-lg-5">
+              <div class="special-img position-relative">
+                <span class="sale">Sale</span>
+                <img src="assets/img/p7.jpg" class="img-fluid" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
     <!-- Testimonial sección -->
+    <section id="testimonial" class="testimonial">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="headline text-center mb-5">
+              <h2 class="pb-3 position-relative d-inline-block">Testimonials</h2>
+            </div>
+          </div>
+          <div class="col-sm-12 col-lg-8 offset-lg-2 text-center">
+            <div id="carouselExampleIndicatorsTwo" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                 <div class="testimonial-wrapper">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <img src="assets/img/user.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="username">
+                      <h3> Martín Johe, Co-Founder / CEO</h3>
+                      <span>Fastcompany ltd.</span>
+                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur neque nisi temporibus cumque laboriosam deserunt quos, dolorum, tempora quas sed impedit sapiente maxime asperiores iure, possimus explicabo facere nihil. Quod? </p>
+                    </div>
+                  </div>
+                 </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="testimonial-wrapper">
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <img src="assets/img/user2.png" alt="" class="img-fluid">
+                      </div>
+                      <div class="username">
+                        <h3> Martín Johe, Co-Founder / CEO</h3>
+                        <span>Fastcompany ltd.</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur neque nisi temporibus cumque laboriosam deserunt quos, dolorum, tempora quas sed impedit sapiente maxime asperiores iure, possimus explicabo facere nihil. Quod? </p>
+                      </div>
+                    </div>
+                   </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true">
+                  <span class="ti-angle-left slider-icon"></span>
+                </span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true">
+                  <span class="ti-angle-right slider-icon"></span>
+                </span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact sección & Form -->
+    <section id="contact">
+      <div class="contact">
+        <div class="container">
+          <div class="mb-5 text-center">
+            <h5>Lest's Start a Conversation!</h5>
+            <h2 class="fw-bold">Contact Us</h2>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-5 col-md-5">
+              <h4 class="fw-bold">Contact Info</h4>
+              <ul class="info list-unstyled">
+                <li class="d-flex align-items-center">
+                  <span class="pe-3 ti-location-pin fs-5"></span>
+                  <p><a href="">Lorem ipsum dolor sit amet, consectetur.</a></p>
+                </li>
+                <li class="d-flex align-items-center">
+                  <span class="pe-3 ti-mobile fs-5"></span>
+                  <p><a href="">+91 999-999-999</a></p>
+                </li>
+                <li class="d-flex align-items-center">
+                  <span class="pe-3 ti-envelope fs-5"></span>
+                  <p><a href="">info@shop.in</a></p>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-7 col-md-7 pt-lg-0 pt-md-0 pt-4">
+              <form>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="name" id="name" placeholder="Tú nombre">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Dirección de Email">
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <textarea class="textarea" name="message" id="message" cols="30" rows="4" placeholder="Escribe tu mensaje"></textarea>
+                    </div>
+                  </div>
+                  <div class="col-md-12">                   
+                      <button class="btn btn-danger"><span class="ti-rocket pe-2 fs-5"> Enviar Mensaje</span></button>                    
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Footer sección -->
+    <footer>
+      <div class="p-3 copyright">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-start">
+              <p class="my-0">Copyright © 2021 <a href="#">E-SHOP</a>All Rights Reserved</p>
+            </div>
+            <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-end">
+              <p>Designed by <a href="#" target="_blank">AntonioPDev</a>.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- Scroll Back To Top -->    
+    <div id="scrollUp" title="Scroll To Top">
+      <a href="#home"><span class="ti-arrow-up fs-4 text-white"></span></a>
+    </div>
+
+
+
+
+
+
 
     <a href="welcome.html">Back to Welcome</a>
 
