--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="/assets/css/responsive.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpg" href="assets/img/PngItem_112730 - copia.ico"/>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
