corrijo las rutas de enlaces para abrir sin vcs

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Iconos CSS -->
-    <link rel="stylesheet" href="/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="./assets/css/themify-icons.css">
 
     <!-- Bootstrap 5.2.2 CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/jpg" href="assets/img/PngItem_112730 - copia.ico"/>
+    <link rel="icon" type="image/jpg" href="./assets/img/PngItem_112730 - copia.ico"/>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
