--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="/assets/css/welcome.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/welcome.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>  
     
 </head>
