agrego imagen especial con efecto especial

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
               <div class="special-img position-relative">
                 <span class="sale">Sale</span>
                 <img src="assets/img/especial-negra-frente.png" class="img-fluid" alt="">
+                <img src="assets/img/especial-negra-espalda.png" class="img-fluid image-dos" alt="">
               </div>
             </div>
           </div>
