cambio imagen y mensaje welcome.css

--- a/welcome.html
+++ b/welcome.html
@@ -20,7 +20,7 @@
         <div class="inner">
             <div class="content">
                 <section class="animate__animated animate__backInDown" data-os-animation-delay="1s">
-                    <h1>WELCOME</h1>
+                    <h1>Bienvenido<br>a<br>FrikiGit</h1>                    
                 </section>
                 <section class="animate__animated animate__backInUp"  data-os-animation-delay=".1s">
                     <a href="index.html" class="btn">EMPECEMOS YA !!</a>
