añado el botón del carrito al navbar con stilo.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
   </head> <!-- aqui en body iria  onload="myWelcome()"-->
   <body data-bs-spy="scroll" data-bs-target=".navbar">
-    <!-- NavBar sección -->
+<!-- NavBar sección -->
     <section id="header">
       <nav class="navbar navbar-expand-lg bg-white fixed-top">
         <div class="container" style="padding-left: 12px; margin-left: 10px">
@@ -37,7 +37,7 @@
               class="img-fluid"
               alt="logo-empresa"
             />
-          </a>
+          </a>          
           <button
             class="navbar-toggler"
             type="button"
@@ -48,8 +48,8 @@
             aria-label="Toggle navigation"
           >
             <span class="ti-align-justify"></span>
-            <!-- <span class="navbar-toggler-icon"></span> -->
-          </button>
+<!-- <span class="navbar-toggler-icon"></span> -->
+          </button>          
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
@@ -71,11 +71,14 @@
               </li>
             </ul>
           </div>
+<!-- Botón del carrito -->
+          <button class="boton-carrito " id="boton-carrito" ><i class="ti-shopping-cart" aria-hidden="true"></i><span class="contadorCarrito">0</span>
+          </button>
         </div>
       </nav>
     </section>
 
-    <!--  Home sección -->
+<!--  Home sección -->
     <section id="home" class="home pt-5 overflow-hidden">
       <div
         id="carouselExampleIndicators"
@@ -146,11 +149,11 @@
         </button>
       </div>
 
-      <!-- Offert sección -->
+<!-- Offert sección -->
       <div class="offers">
         <div class="container">
           <div class="row">
-            <!-- Offer Box One -->
+<!-- Offer Box One -->
             <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
               <a href="#">
                 <div class="offer-box text-center position-relative">
@@ -183,7 +186,7 @@
                 </div>
               </a>
             </div>
-            <!-- Offer Box Two -->
+<!-- Offer Box Two -->
             <div
               class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between"
             >
@@ -251,7 +254,7 @@
               </a>
             </div>
 
-            <!-- Offer Box Three -->
+<!-- Offer Box Three -->
             <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
               <a href="#">
                 <div class="offer-box text-center position-relative">
@@ -289,7 +292,7 @@
       </div>
     </section>
 
-    <!-- Products sección -->
+<!-- Products sección -->
     <section id="products" class="products">
       <div class="container">
         <div class="row">
@@ -329,7 +332,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -360,7 +363,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -391,7 +394,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -422,7 +425,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -454,7 +457,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -486,7 +489,7 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR</button>
+                  <button type="button" class="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
@@ -511,7 +514,7 @@
       </div>
     </section>
 
-    <!-- Special sección -->
+<!-- Special sección -->
     <section id="special" class="special">
       <div class="container">
         <div class="row">
@@ -541,7 +544,7 @@
               <span class="countdown-price h3 d-block mb-4"
                 >9.99€ <del>30.00€</del></span
               >
-              <button type="button" class="btn btn-danger">AÑADIR</button>
+              <button type="button" class="btn btn-danger">AÑADIR 🛒</button>
             </div>
           </div>
           <div class="col-sm-12 col-lg-5">
@@ -563,7 +566,7 @@
       </div>
     </section>
 
-    <!-- Testimonial sección -->
+<!-- Testimonial sección -->
     <section id="testimonial" class="testimonial">
       <div class="container">
         <div class="row">
@@ -673,7 +676,7 @@
       </div>
     </section>
 
-    <!-- Contact sección & Form -->
+<!-- Contact sección & Form -->
     <section id="contact">
       <div class="contact">
         <div class="container">
@@ -750,7 +753,7 @@
       </div>
     </section>
 
-    <!-- Footer sección -->
+<!-- Footer sección -->
     <footer>
       <div class="p-3 copyright">
         <div class="container">
@@ -777,17 +780,17 @@
       </div>
     </footer>
 
-    <!-- Scroll Back To Top -->
+<!-- Scroll Back To Top -->
     <div id="scrollUp" title="Scroll To Top">
       <a href="#home"><span class="ti-arrow-up fs-4 text-white"></span></a>
     </div>
 
-    <a href="welcome.html">Back to Welcome</a>
+    <a href="./assets/html/welcome.html">Back to Welcome</a>
 
-    <!-- Bootstrap 5.2.2 JS externo  -->
-    <script src="assets/js/bootstrap.min.js"></script>
+<!-- Bootstrap 5.2.2 JS externo  -->
+    <script src="../../assets/js/bootstrap.min.js"></script>
 
-    <!-- Main  JS externo -->
+<!-- Main  JS externo -->
     <!-- <script>      
       ((intento de crear onload que manda a la pag welcome))
         function myWelcome() {
