--- a/assets/html/welcome.html
+++ b/assets/html/welcome.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="../assets/css/welcome.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/welcome.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>  
     
 </head>
@@ -23,7 +23,7 @@
                     <h1>Bienvenido<br>a<br>FrikiGit</h1>                    
                 </section>
                 <section class="animate__animated animate__backInUp"  data-os-animation-delay=".1s">
-                    <a href="../index.html" class="btn" id="btn-welcome">EMPECEMOS YA !!</a>
+                    <a href="../../index.html" class="btn" id="btn-welcome">EMPECEMOS YA !!</a>
                 </section>
             </div>
         </div>
