--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       type="image/jpg"
       href="./assets/img/PngItem_112730 - copia.ico"
     />
-  </head> <!-- aqui en body iria  onload="myWelcome()"-->
+  </head> 
+<!-- aqui en body iria  onload="myWelcome()"-->
   <body data-bs-spy="scroll" data-bs-target=".navbar">
 <!-- NavBar sección -->
     <section id="header">
@@ -37,7 +38,10 @@
               class="img-fluid"
               alt="logo-empresa"
             />
-          </a>          
+          </a>
+          <!-- Botón del carrito -->
+          <button class="boton-carrito " id="boton-carrito" ><i class="ti-shopping-cart" aria-hidden="true"></i><span class="contadorCarrito">0</span>
+          </button>          
           <button
             class="navbar-toggler"
             type="button"
@@ -71,9 +75,7 @@
               </li>
             </ul>
           </div>
-<!-- Botón del carrito -->
-          <button class="boton-carrito " id="boton-carrito" ><i class="ti-shopping-cart" aria-hidden="true"></i><span class="contadorCarrito">0</span>
-          </button>
+
         </div>
       </nav>
     </section>
@@ -292,7 +294,7 @@
       </div>
     </section>
 
-<!-- Products sección -->
+<!-- Productos sección -->
     <section id="products" class="products">
       <div class="container">
         <div class="row">
@@ -306,7 +308,7 @@
         </div>
         <div class="row">
           <!-- Producto 1 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="1">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -332,13 +334,13 @@
                     <span class="ti-star"></span>
                     <span class="ti-star"></span>
                   </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
+                  <button type="button" class="add_to_card" id="add_to_card">AÑADIR🛒</button>
                 </div>
               </div>
             </a>
           </div>
           <!-- Producto 2 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="2">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -369,7 +371,7 @@
             </a>
           </div>
           <!-- Producto 3 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="3">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -400,7 +402,7 @@
             </a>
           </div>
           <!-- Producto 4 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="4">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -431,7 +433,7 @@
             </a>
           </div>
           <!-- Producto 5 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="5">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -463,7 +465,7 @@
             </a>
           </div>
           <!-- Producto 6 -->
-          <div class="col-sm-6 col-lg-4">
+          <div class="col-sm-6 col-lg-4" id="6">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -566,7 +568,7 @@
       </div>
     </section>
 
-<!-- Testimonial sección -->
+<!-- Testimonios sección -->
     <section id="testimonial" class="testimonial">
       <div class="container">
         <div class="row">
@@ -676,7 +678,7 @@
       </div>
     </section>
 
-<!-- Contact sección & Form -->
+<!-- Contacto sección & Form -->
     <section id="contact">
       <div class="contact">
         <div class="container">
@@ -741,8 +743,13 @@
                     </div>
                   </div>
                   <div class="col-md-12">
-                    <button class="btn btn-danger">
-                      <span class="ti-rocket pe-2 fs-5"> Enviar Mensaje</span>
+                    <button class="btn btn-danger" style="
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                    padding-left: 8px;
+                    padding-right: 8px;
+                     ">
+                      <span><img class="icono-enviar" src="assets/img/FrikiGit-logo.png" alt=""> Enviar Mensaje</span>
                     </button>
                   </div>
                 </div>
@@ -760,7 +767,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-start">
               <p class="my-0">
-                Copyright © 2022 <a href="#">FrikiGit </a>Todos los Derechos
+                Copyright © 2022 <a href="#"><img class="icono-enviar" src="assets/img/FrikiGit-logo.png" alt="">FrikiGit </a>Todos los Derechos
                 Reservados
               </p>
             </div>
@@ -798,5 +805,6 @@
       }      
     </script> -->
     <script src="./assets/js/main.js"></script>
+    <!-- <script src="assets/js/app.js"></script> -->
   </body>
 </html>
