creo Stock de la seccion productos y los paso a js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       type="image/jpg"
       href="./assets/img/PngItem_112730 - copia.ico"
     />
+    <script defer src="assets/js/stock.js"></script>
+    <script defer src="assets/js/app.js"></script>
   </head> 
 <!-- aqui en body iria  onload="myWelcome()"-->
   <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -306,9 +308,9 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <!-- Producto 1 -->
-          <div class="col-sm-6 col-lg-4" id="1">
+        <div class="row" id="contenedor-productos">
+<!--! Producto 1 -->
+         <!-- <div class="col-sm-6 col-lg-4" id="1">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -338,9 +340,9 @@
                 </div>
               </div>
             </a>
-          </div>
-          <!-- Producto 2 -->
-          <div class="col-sm-6 col-lg-4" id="2">
+          </div> -->
+<!--! Producto 2 -->
+          <!-- <div class="col-sm-6 col-lg-4" id="2">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -369,9 +371,9 @@
                 </div>
               </div>
             </a>
-          </div>
-          <!-- Producto 3 -->
-          <div class="col-sm-6 col-lg-4" id="3">
+          </div> -->
+<!--! Producto 3  -->
+        <!--  <div class="col-sm-6 col-lg-4" id="3">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -400,9 +402,9 @@
                 </div>
               </div>
             </a>
-          </div>
-          <!-- Producto 4 -->
-          <div class="col-sm-6 col-lg-4" id="4">
+          </div> -->
+<!--! Producto 4 -->
+          <!-- <div class="col-sm-6 col-lg-4" id="4">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -431,9 +433,9 @@
                 </div>
               </div>
             </a>
-          </div>
-          <!-- Producto 5 -->
-          <div class="col-sm-6 col-lg-4" id="5">
+          </div> -->
+<!--! Producto 5 -->
+          <!-- <div class="col-sm-6 col-lg-4" id="5">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -463,9 +465,9 @@
                 </div>
               </div>
             </a>
-          </div>
-          <!-- Producto 6 -->
-          <div class="col-sm-6 col-lg-4" id="6">
+          </div> -->
+<!--! Producto 6 -->
+          <!-- <div class="col-sm-6 col-lg-4" id="6">
             <a href="#" class="d-block text-center mb-4">
               <div class="product-list">
                 <div class="product-image position-relative">
@@ -482,7 +484,7 @@
                   />
                 </div>
                 <div class="product-name pt-3">
-                  <h3 class="text-capitalize">camiseta de chico manga larga</h3>
+                  <h3 class="text-capitalize">Camiseta de chico manga larga</h3>
                   <p class="mb-0 amount">12.50€ <del>25.00€</del></p>
                   <div class="py-1">
                     <span class="ti-star active"></span>
@@ -495,7 +497,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
 
         <!-- UP to 75% OFF -->
@@ -805,6 +807,5 @@
       }      
     </script> -->
     <script src="./assets/js/main.js"></script>
-    <!-- <script src="assets/js/app.js"></script> -->
   </body>
 </html>
