ajustado el responsive del Home

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
     <a href="./assets/html/welcome.html">Back to Welcome</a>
 
 <!-- Bootstrap 5.2.2 JS externo  -->
-    <script src="../../assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
 
 <!-- Main  JS externo -->
     <!-- <script>      
