retoques del localStorage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               alt="logo-empresa"
             />
           </a>
-          <!-- Botón del carrito -->
+<!-- Botón del carrito -->
           <button class="boton-carrito " id="boton-carrito" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="ti-shopping-cart" aria-hidden="true"></i> <span id="contadorCarrito">0</span>
           </button>          
           <button
@@ -500,7 +500,7 @@
           </div> -->
         </div>
 
-        <!-- UP to 75% OFF -->
+<!-- UP to 75% OFF -->
         <div class="overflow-hidden my-5">
           <div class="row">
             <div class="col-sm-12 up_to_off">
@@ -761,7 +761,7 @@
         </div>
       </div>
     </section>
-    <!-- Modal Contenedor Carrito  -->
+<!-- Modal Contenedor Carrito  -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -772,14 +772,12 @@
           <div class="modal-body" id="carrito-contenedor">            
           </div>
           <div class="modal-footer">
-            <p class="precioProducto">Precio total: €<span id="precioTotal">0</span></p>
+            <p class="precioProducto">Precio total: <b><span id="precioTotal">0</span> €</b></p>
             <button id="vaciar-carrito" type="button" class="btn btn-danger" >Vaciar carrito</button>
           </div>
         </div>
       </div>
-    </div>
-
-
+    </div>   
 <!-- Footer sección -->
     <footer>
       <div class="p-3 copyright">
@@ -817,13 +815,12 @@
 <!-- Bootstrap 5.2.2 JS externo  -->
     <script src="./assets/js/bootstrap.min.js"></script>
 
-<!-- Main  JS externo -->
-    <!-- <script>      
-      ((intento de crear onload que manda a la pag welcome))
+<!-- Main  JS externo ((intento de crear onload que manda a la pag welcome)) -->
+    <!-- <script>            
         function myWelcome() {
-        location.href = "./html/welcome.html";        
+        location.href = "./assets/html/welcome.html";        
       }      
-    </script> -->
+    </script> -->  
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
