Agrego miniatura de prductos al carrito

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             aria-label="Toggle navigation"
           >
             <span class="ti-align-justify"></span>
-<!-- <span class="navbar-toggler-icon"></span> -->
           </button>          
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
@@ -548,7 +547,7 @@
               <span class="countdown-price h3 d-block mb-4"
                 >9.99€ <del>30.00€</del></span
               >
-              <button type="button" class="btn btn-danger">AÑADIR 🛒</button>
+              <button id="add_to_card5" type="button" class="btn btn-danger">AÑADIR 🛒</button>
             </div>
           </div>
           <div class="col-sm-12 col-lg-5">
@@ -708,6 +707,7 @@
               </ul>
             </div>
             <div class="col-lg-7 col-md-7 pt-lg-0 pt-md-0 pt-4">
+<!-- Formulario -->
               <form>
                 <div class="row">
                   <div class="col-md-6">
@@ -821,6 +821,6 @@
         location.href = "./assets/html/welcome.html";        
       }      
     </script> -->  
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>   
   </body>
 </html>
