agrego la ventana de welcome, con windows.open()

--- a/assets/html/welcome.html
+++ b/assets/html/welcome.html
@@ -23,10 +23,16 @@
                     <h1>Bienvenido<br>a<br>FrikiGit</h1>                    
                 </section>
                 <section class="animate__animated animate__backInUp"  data-os-animation-delay=".1s">
-                    <a href="../../index.html" class="btn" id="btn-welcome">EMPECEMOS YA !!</a>
+                    <a href="" class="btn" id="btn-welcome" onclick="closeCurrentWindow()">EMPECEMOS YA !!</a>
                 </section>
             </div>
         </div>
     </section>
+    <script type="text/javascript">
+        function closeCurrentWindow()
+        {
+          window.close();
+        }
+        </script>
 </body>
 </html>
