audio: en welcome pag

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="row">
 <!-- Offer Box One -->
             <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
-              <a href="#">
+              <a href="#products">
                 <div class="offer-box text-center position-relative">
                   <div class="offer-inner">
                     <div class="offer-image position-relative overflow-hidden">
@@ -193,7 +193,7 @@
             <div
               class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between"
             >
-              <a href="#">
+              <a href="#products">
                 <div
                   class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0"
                 >
@@ -225,7 +225,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#">
+              <a href="#products">
                 <div class="offer-box text-center position-relative">
                   <div class="offer-inner">
                     <div class="offer-image position-relative overflow-hidden">
@@ -259,7 +259,7 @@
 
 <!-- Offer Box Three -->
             <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
-              <a href="#">
+              <a href="#products">
                 <div class="offer-box text-center position-relative">
                   <div class="offer-inner">
                     <div class="offer-image position-relative overflow-hidden">
@@ -751,7 +751,7 @@
                     padding-left: 8px;
                     padding-right: 8px;
                      ">
-                      <span><img class="icono-enviar" src="assets/img/FrikiGit-logo.png" alt=""> Enviar Mensaje</span>
+                      <span><img class="icono-enviar" src="./assets/img/FrikiGit-logo.png" alt=""> Enviar Mensaje</span>
                     </button>
                   </div>
                 </div>
@@ -785,15 +785,14 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-start">
               <p class="my-0">
-                Copyright © 2022 <a href="#"><img class="icono-enviar" src="assets/img/FrikiGit-logo.png" alt="">FrikiGit </a>Todos los Derechos
+                Copyright © 2022 <a><img class="icono-enviar" src="./assets/img/FrikiGit-logo.png" alt="">FrikiGit </a>Todos los Derechos
                 Reservados
               </p>
             </div>
             <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-end">
               <p>
                 Diseñado por
-                <a
-                  href="#"
+                <a                  
                   target="_blank"
                   style="color: black; font-weight: bold"
                   >AntonioPDev</a
