--- a/assets/html/welcome.html
+++ b/assets/html/welcome.html
@@ -24,6 +24,7 @@
                 </section>
                 <section class="animate__animated animate__backInUp"  data-os-animation-delay=".1s">
                     <a href="" class="btn" id="btn-welcome" onclick="closeCurrentWindow()">EMPECEMOS YA !!</a>
+                    <audio src="../audio/what-we-became-pecan-pie-main-version-16028-02-43.mp3" controls></audio>
                 </section>
             </div>
         </div>
