--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
 <!-- Special sección -->
     <section id="special" class="special">
-      <div class="container">
+      <div class="container" id="special-section">
         <div class="row">
           <div class="col-sm-12">
             <div class="headline text-center mb-5">
